# rust-rest-template

cli/: Cargo.toml
config/: Cargo.toml
config/src/: lib.rs
web/: Cargo.toml
web/src/: lib.rs  main.rs  routes.rs  state.rs
web/src/controllers/: example.rs
web/tests/: example_test.rs
web/tests/common/: mod.rs
